--- a/app/views/main/_main_menu3.html.slim
+++ b/app/views/main/_main_menu3.html.slim
@@ -8,10 +8,5 @@ div.container
 					- @reports.each do |report|
 						- if report.target
 							li
-								- if report.status == :reporting
-									span.label.label-info= report.localize_status
-								- else
-									span.label.label-warning= report.localize_status
+								=' report_status(report.status,report.localize_status)
 								= link_to report.target.summary, report.target
-/!		div.span4
-/!			= render partial: "this_week"
