--- a/app/views/vacation_types/_form.html.slim
+++ b/app/views/vacation_types/_form.html.slim
@@ -9,5 +9,8 @@ h2= t("common.title.#{action_name}")
     p
       = f.label :title
       = f.text_field :title
+    p
+      = f.label :deductible
+      = f.check_box :deductible
   p
     = f.submit
