--- a/app/views/used_vacations/_form.html.slim
+++ b/app/views/used_vacations/_form.html.slim
@@ -21,6 +21,7 @@ h2= t("common.title.#{action_name}")
     span.help-block= t("used_vacations.period_help")
     button.btn type="submit" =t("used_vacations.new.link")
     javascript:
+        var deductible = 0;
         $(document).ready(function () {
             checkPeriod();
         });
@@ -28,7 +29,9 @@ h2= t("common.title.#{action_name}")
         $(".check").change(function() {
             checkPeriod();
         });
-
+        $("#used_vacation_type_").change(function() {
+            checkPeriod();
+        });
         function checkPeriod() {
             var data = {
             from_year: $("#used_vacation_from_1i").val(),
@@ -39,6 +42,7 @@ h2= t("common.title.#{action_name}")
             to_month: $("#used_vacation_to_2i").val(),
             to_day: $("#used_vacation_to_3i").val(),
             to_half: $("#used_vacation_to_half").val(),
+            vacation_type_id: $("#used_vacation_type_ option:selected").val(),
             };
             var request = $.ajax({
                 url: "/api/check_period",
@@ -52,6 +56,6 @@ h2= t("common.title.#{action_name}")
             });
  
             request.fail(function(jqXHR, textStatus) {
-                alert( "Request failed: " + textStatus );
+                //alert( "Request failed: " + textStatus );
             });
         }
