--- a/app/views/main/index.html.slim
+++ b/app/views/main/index.html.slim
@@ -12,4 +12,16 @@ div.hidden-phone
 		        - else
 		        	= event.title
 
+div.visible-phone
+	ul
+		- @vacations2.each do |used|
+			li= link_to used.title, vacation_used_vacation_path(used.vacation, used)
+
 = render partial: "main_menu3"
+
+javascript:
+	$(document).ready(function () {
+		$( ".holiday" ).each(function() {
+				$(this).parent().parent().addClass("wday-6");
+		});
+    });
